@@ -1398,8 +1398,7 @@ public class DFSClient implements java.io.Closeable, RemotePeerFactory,
       throws IOException, UnresolvedLinkException {
     checkOpen();
     //    Get block info from namenode
-    return new DFSInputStream(this, src, buffersize, verifyChecksum, dfsClientConf
-            .hdfsClientEmulationForSF);
+    return new DFSInputStream(this, src, verifyChecksum, dfsClientConf.hdfsClientEmulationForSF);
   }
 
   /**
